# newLib

./: .gitignore  Doxyfile  README.md  Test.java  antenna_locations.txt  client.py  copterpos.txt  erase.txt  followApp.old  gui.py  gui_simple.py  out  out.old  outputs.txt  outputstest.txt  pom (copy).xml  pom.xml  pom.xml.back  run.sh  run.sh~  run2.sh  server.py  tasks.txt  testmain_config.txt  vrpn_wrapper.py  wp.txt
Koffee/: Makefile  TaskApp.java  ast.py.old  asts.py  asttypes.py  codegen.py  generic.py  hvac.krd  ic.py  indentlexer.py  kparser.py  lineform.krd  mdecls.py  mycompiler.py  parser.py.old  parsetab.py  scanner.py  shapeform.krd  test.krd  test.py
Koffee/source/: asts.rst  conf.py  generic.rst  ic.rst  indentlexer.rst  mdecls.rst  scanner.rst
bridge_src/src/ros/msgs/geometry_msgs/: Point.java
bridge_src/src/ros/msgs/std_msgs/: Waypoint.java
bridge_src/src/tests/: HelloWorld.java  RosTest.java
directoryd/: .gitignore  Avahi.cpp  Avahi.hpp  BotInfoSelector.java  Browser.cpp  Browser.hpp  CMakeLists.txt  COPYING  README  Registrar.cpp  Registrar.hpp  Service.hpp  ServiceGroup.hpp  Services.proto  TestMain.java  addresses.txt  botinfoupdate.py  generator.py  launch.sh  main.cpp  query_script.sh  readme1  register_script.sh  simple_client.cpp  simple_server.cpp  test_browse.cpp  test_register.cpp  testmainupdate.py  vehicles.txt
directoryd/ddclient/: ddclient.cpp  ddclient.hpp  query.cpp  query.hpp  register.cpp  register.hpp  test_query.cpp  test_register.cpp
directoryd/protobuf/: Services.pb.cc  Services.pb.h
lib/: ins
newLib.wiki/: Alexander---Spring-2018.md
src/edu/illinois/mitra/starl/comms/: LossyMessageSender.java  MessageContents.java  MessageResult.java  RobotMessage.java  SmartCommsHandler.java  SmartUdpComThread.java  UdpGpsReceiver.java  UdpMessage.java
src/edu/illinois/mitra/starl/exceptions/: ItemFormattingException.java
src/edu/illinois/mitra/starl/functions/: BarrierSynchronizer.java  BullyLeaderElection.java  DSMMultipleAttr.java  Geocaster.java  PickedLeaderElection.java  RandomLeaderElection.java  SingleHopMutualExclusion.java
src/edu/illinois/mitra/starl/gvh/: AndroidLogging.java  AndroidPlatform.java  Comms.java  GlobalVarHolder.java  Gps.java  Id.java  Logging.java  RealAndroidPlatform.java  RealGlobalVarHolder.java  SimGlobalVarHolder.java  SimLogging.java  Trace.java
src/edu/illinois/mitra/starl/harness/: DecoupledDelayQueue.java  DecoupledSimComChannel.java  DelayedRunnable.java  SimComThread.java  (+11 more)
src/main/java/testSim/data/: CsvWriter.java
src/main/java/testSim/draw/: DrawFrame.java  DrawPanel.java  Drawer.java  Geometry.java  RobotData.java  ZoomablePanel.java
src/main/java/testSim/follow/: FollowApp.java  FollowDrawer.java  Main.java  Path.java  SimplePP.java  Task.java
src/main/java/testSim/main/: GlobalLogger.java  ObstLoader.java  SettingsWriter.java  SimApp.java  SimSettings.java  Simulation.java  SptLoader.java  WptLoader.java
src/main/java/testmain/: BotInfoSelector.java  BotInfoSelector.java~  FollowApp.java  FollowApp.java.orig  FollowApp.java.working  FollowApp.java~  Initiator.java  SimplePP.java  Task.java  TaskApp.java  TestMain.java  TestMain.java~  gui_simple.py  tasks.txt
src/main/java/testmain2/: BotInfoSelector.java  FollowApp.java  Initiator.java  TestMain2.java  gui_simple.py
src/main/resources/: log4j.properties
tools/: send.py  simul_recv.c
waypoints/: crappy paths that dont work  four.wpt  initial_positions.wpt  square.wpt
(+209 files in other folders)
